# songs_project

./: .dockerignore  .env.sample  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  env.sample  pyproject.toml  test_redis_cache.sh  wsgi.py
docs/: CONFIGURATION.md  FEATURES.md  RATE_LIMITING.md  architecture.md
songs_api/: __init__.py  constants.py  database.py  logging_config.py  rate_limiter.py  schemas.py  settings.py  uow.py
songs_api/api/: caching.py  dependencies.py  errors.py
songs_api/api/v1/: __init__.py  auth_routes.py  router.py  routes.py  songs_routes.py  system_routes.py
songs_api/infrastructure/: __init__.py  cache.py  database.py  logging_config.py  rate_limiter.py  resources.py  uow.py
songs_api/models/: documents.py
songs_api/repositories/: __init__.py  base_repository.py  ratings_repository.py  songs_repository.py  users_repository.py
songs_api/scripts/: init_db.py  seed.py  seed_users.py
songs_api/security/: __init__.py  jwt_auth.py
songs_api/services/: __init__.py  auth_service.py  ratings_service.py  songs_service.py
songs_api/utils/: dependencies.py  validation.py
tests/: conftest.py  test_auth.py  test_concurrency.py  test_difficulty.py  test_edge_cases.py  test_health.py  test_performance.py  test_ratings.py  test_search.py  test_songs_list.py  test_uow_pattern.py
